--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
 </head>
 <style>
     html {
+        font-family: Helvetica, Arial, sans-serif;
         height: 300px;
         width: 500px;
     }
 
     body {
-        height: 300px;
+        height: 500px;
         width: 500px;
     }
 
+    .heading {
+        font-size: 2rem;
+        font-weight: 500;
+        color: green;
+    }
 
     .warnings {
         display: flex;
@@ -22,21 +29,171 @@
     }
 
     .warning {
+        font-size: 1.5rem;
+        font-weight: 400;
         display: flex;
         flex-direction: row;
         gap: 10px;
     }
 
     .warning-icon {
-        height: 16px;
+        width: 32px;
+        height: 32px;
     }
 
+    .warnings-wrapper {
+        display: flex;
+        flex-direction: column;
+
+        justify-content: center;
+        margin-bottom: 2rem;
+        margin-left: 1rem;
+    }
+
+    .link {
+        font-size: 25px;
+        color: green;
+        text-decoration: dotted;
+        font-style: italic;
+        font-weight: 300;
+    }
+
+    /* == SPINNER == */
+    .lds-default {
+        display: inline-block;
+        position: relative;
+        width: 80px;
+        height: 80px;
+    }
+
+    .lds-default div {
+        position: absolute;
+        width: 6px;
+        height: 6px;
+        background: green;
+        border-radius: 50%;
+        animation: lds-default 1.2s linear infinite;
+
+    }
+
+    .lds-default div:nth-child(1) {
+        animation-delay: 0s;
+        top: 37px;
+        left: 66px;
+    }
+
+    .lds-default div:nth-child(2) {
+        animation-delay: -0.1s;
+        top: 22px;
+        left: 62px;
+    }
+
+    .lds-default div:nth-child(3) {
+        animation-delay: -0.2s;
+        top: 11px;
+        left: 52px;
+    }
+
+    .lds-default div:nth-child(4) {
+        animation-delay: -0.3s;
+        top: 7px;
+        left: 37px;
+    }
+
+    .lds-default div:nth-child(5) {
+        animation-delay: -0.4s;
+        top: 11px;
+        left: 22px;
+    }
+
+    .lds-default div:nth-child(6) {
+        animation-delay: -0.5s;
+        top: 22px;
+        left: 11px;
+    }
+
+    .lds-default div:nth-child(7) {
+        animation-delay: -0.6s;
+        top: 37px;
+        left: 7px;
+    }
+
+    .lds-default div:nth-child(8) {
+        animation-delay: -0.7s;
+        top: 52px;
+        left: 11px;
+    }
+
+    .lds-default div:nth-child(9) {
+        animation-delay: -0.8s;
+        top: 62px;
+        left: 22px;
+    }
+
+    .lds-default div:nth-child(10) {
+        animation-delay: -0.9s;
+        top: 66px;
+        left: 37px;
+    }
+
+    .lds-default div:nth-child(11) {
+        animation-delay: -1s;
+        top: 62px;
+        left: 52px;
+    }
+
+    .lds-default div:nth-child(12) {
+        animation-delay: -1.1s;
+        top: 52px;
+        left: 62px;
+    }
+
+    @keyframes lds-default {
+
+        0%,
+        20%,
+        80%,
+        100% {
+            transform: scale(1);
+        }
+
+        50% {
+            transform: scale(1.5);
+        }
+    }
+
+    .centerer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 500px;
+    }
 </style>
+
 <body>
     <div id="root">
-        <h1>Varovania pre tento článok:</h1>
-        <h2 id="loading">Načítavam...</h2>
+        <h1 class="heading">Varovania pre tento článok:</h1>
+        <div id="loading" class="centerer">
+            <div class="lds-default">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+
+
     </div>
     <script src="popup-script.js"></script>
 </body>
+
 </html>
