--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script src="background.js"></script>
+    <script src="popup-script.js"></script>
 </body>
 </html>
